# hyperlight-wasm

./: .gitignore  Cargo.toml  Justfile  README.md  RustDev.md  bug.md
.devcontainer/: Dockerfile
.github/workflows/: Benchmarks.yml  CargoAudit.yml  CreateDevcontainerImage.yml  CreateRelease.yml  dep_build_wasm_examples.yml  dep_cargo_publish.yml  dep_rust.yml
.squad/decisions/inbox/: billy-phase35-wit.md
demos/dotnet-wasm-python/: HyperlightWasmPythonDemo.csproj  Program.cs  README.md
docs/: prd-hyperlight-sandbox.md
docs/upstream-issues/: 01-name-collision.md  02-empty-namespace-double-colon.md  03-noff-var-id-disambiguation.md  04-python-cargo-patch.md
examples/agent-framework/: README.md  copilot_agent.py
examples/copilot-sdk/: README.md  copilot_sdk_tools.py
examples/python-sdk/: basic.py  capabilities_demo.py
python/: Cargo.toml  README.md  pyproject.toml
python/hyperlight_sandbox/: __init__.py
python/src/: lib.rs
src/examples_common/: Cargo.toml
src/examples_common/src/: lib.rs
src/guest/: hyperlight.py  sandbox_executor.py
src/hyperlight_component_util/src/: component.rs  elaborate.rs  emit.rs  etypes.rs  hl.rs  host.rs  rtypes.rs  substitute.rs  wf.rs
src/hyperlight_sandbox/: Cargo.toml
src/hyperlight_sandbox/examples/: hello.rs
src/hyperlight_sandbox/src/: lib.rs  resource.rs  virtual_fs.rs  wasi_impl.rs  worker.rs
src/hyperlight_sandbox/src/types/: buffer.rs  cli.rs  clocks_monotonic_clock.rs  clocks_wall_clock.rs  headers.rs  http_future.rs  http_future_headers.rs  http_future_incoming_response.rs  http_headers.rs  http_incoming_body.rs  http_incoming_request.rs  http_incoming_response.rs  http_outgoing_body.rs  http_outgoing_handler.rs  http_outgoing_request.rs  http_outgoing_response.rs  http_request_options.rs  http_response_outparam.rs  io_error.rs  io_poll.rs  io_stream.rs  random.rs  types.rs
src/hyperlight_wasm/: Cargo.toml  build.rs
src/hyperlight_wasm/benches/: benchmarks.rs
src/hyperlight_wasm/examples/helloworld/: main.rs
src/hyperlight_wasm/examples/hostfuncs/: main.rs
src/hyperlight_wasm/examples/metrics/: main.rs
src/hyperlight_wasm/examples/rust_wasm_examples/: main.rs
src/hyperlight_wasm/scripts/: build-wasm-examples.sh
src/hyperlight_wasm/src/: lib.rs
src/hyperlight_wasm/src/sandbox/: loaded_wasm_sandbox.rs  proto_wasm_sandbox.rs  sandbox_builder.rs  wasm_sandbox.rs
src/hyperlight_wasm_aot/: Cargo.toml
src/hyperlight_wasm_aot/src/: main.rs
src/hyperlight_wasm_host/: Cargo.toml
src/hyperlight_wasm_host/src/: lib.rs
src/hyperlight_wasm_macro/: Cargo.toml
src/hyperlight_wasm_macro/src/: lib.rs  wasmguest.rs
src/hyperlight_wasm_runtime/: Cargo.toml
src/hyperlight_wasm_runtime/src/: platform.rs
src/python_sandbox/: hyperlight.py  sandbox_executor.py
src/python_sandbox/wit/: hyperlight-sandbox-full.wit  hyperlight-sandbox.wit  python-sandbox-world.wasm
src/wasm_runtime/: Cargo.toml  build.rs
src/wasm_runtime/src/: component.rs  hostfuncs.rs  main.rs  marshal.rs  module.rs  platform.rs  wasip1.rs
src/wasmsamples/: HelloWorld.c  dockerfile
