[workspace]
members = ["src/hyperlight_wasm", "src/examples_common", "src/hyperlight_wasm_aot" ]
exclude = [ "src/wasm_runtime",  "src/rust_wasm_samples", "src/hyperlight_wasm_macro" ]
resolver = "2"

[workspace.dependencies]
#hyperlight-host = { version = "0.6", default-features = false, features = ["executable_heap"] }
hyperlight-host = { git = "https://github.com/hyperlight-dev/hyperlight.git", rev = "6c301e3202e6dd27b89bea2747b7b42bf9949a39", default-features = false, features = ["executable_heap"] }
