[workspace]
members = [ "src/hyperlight_wasm", "src/examples_common", "src/hyperlight_wasm_aot", "src/hyperlight_wasm_runtime", "src/hyperlight_wasm_macro", "src/hyperlight_sandbox" ]
exclude = [ "src/rust_wasm_samples", "src/component_sample" ]
resolver = "2"

[workspace.package]
version = "0.13.0"
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0"
homepage = "https://github.com/hyperlight-dev/hyperlight-wasm"
repository = "https://github.com/hyperlight-dev/hyperlight-wasm"
readme = "README.md"

[workspace.dependencies]
hyperlight-common = { git = "https://github.com/hyperlight-dev/hyperlight", rev = "c9a1a4cefce6a085af92e375121e9f1b1c8deeec", default-features = false }
hyperlight-component-macro = { git = "https://github.com/hyperlight-dev/hyperlight", rev = "c9a1a4cefce6a085af92e375121e9f1b1c8deeec" }
hyperlight-component-util = { git = "https://github.com/hyperlight-dev/hyperlight", rev = "c9a1a4cefce6a085af92e375121e9f1b1c8deeec" }
hyperlight-guest = { git = "https://github.com/hyperlight-dev/hyperlight", rev = "c9a1a4cefce6a085af92e375121e9f1b1c8deeec" }
hyperlight-guest-bin = { git = "https://github.com/hyperlight-dev/hyperlight", rev = "c9a1a4cefce6a085af92e375121e9f1b1c8deeec", features = [ "printf" ] }
hyperlight-host = { git = "https://github.com/hyperlight-dev/hyperlight", rev = "c9a1a4cefce6a085af92e375121e9f1b1c8deeec", default-features = false, features = ["executable_heap"] }
hyperlight-wasm-macro = { version = "0.13.0", path = "src/hyperlight_wasm_macro" }
hyperlight-wasm-runtime = { version = "0.13.0", path = "src/hyperlight_wasm_runtime" }
