[workspace]
members = [ "src/hyperlight_wasm", "src/examples_common", "src/hyperlight_wasm_aot", "src/hyperlight_wasm_runtime", "src/hyperlight_wasm_macro" ]
exclude = [ "src/tests/rust_guests/rust_wasm_samples", "src/tests/rust_guests/component_sample", "src/tests/rust_guests/greeter_sample" ]
resolver = "2"

[workspace.package]
version = "0.13.1"
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0"
homepage = "https://github.com/hyperlight-dev/hyperlight-wasm"
repository = "https://github.com/hyperlight-dev/hyperlight-wasm"
readme = "README.md"

[workspace.dependencies]
hyperlight-common = { version = "0.14.0", default-features = false }
hyperlight-component-macro = { version = "0.14.0" }
hyperlight-component-util = { version = "0.14.0" }
hyperlight-guest = { version = "0.14.0" }
hyperlight-guest-bin = { version = "0.14.0", features = [ "printf" ] }
hyperlight-host = { version = "0.14.0", default-features = false, features = ["executable_heap"] }
hyperlight-wasm-macro = { version = "0.13.1", path = "src/hyperlight_wasm_macro" }
hyperlight-wasm-runtime = { version = "0.13.1", path = "src/hyperlight_wasm_runtime" }
