[package]
name = "hyperlight-sandbox-python"
version = "0.1.0"
edition = "2024"
description = "Python bindings for hyperlight-sandbox Wasm component execution"
license = "MIT OR Apache-2.0"

[workspace] # standalone — not part of the hyperlight-wasm workspace

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
hyperlight-sandbox = { path = "../src/hyperlight_sandbox" }
serde_json = "1"
anyhow = "1"
