[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "hyperlight-sandbox"
version = "0.1.0"
description = "Python SDK for running code in isolated Wasm component sandboxes powered by hyperlight-wasm"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Operating System :: POSIX :: Linux",
]
keywords = ["hyperlight", "wasm", "sandbox", "isolation", "code-execution"]

[project.urls]
Repository = "https://github.com/hyperlight-dev/hyperlight-wasm"

[tool.maturin]
python-source = "."
features = ["pyo3/extension-module"]
module-name = "hyperlight_sandbox._native"
