[package]
name = "hyperlight-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = """
High-level Rust host library for running Python code in hyperlight-wasm sandboxes.
Wraps the SandboxBuilder → LoadedWasmSandbox chain with a convenient PythonSandbox API.
"""

[dependencies]
hyperlight-wasm = { path = "../hyperlight_wasm" }
hyperlight-host.workspace = true
hyperlight-component-macro = { git = "https://github.com/hyperlight-dev/hyperlight", rev = "c9a1a4cefce6a085af92e375121e9f1b1c8deeec" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
