[package]
name = "hyperlight-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = """
Library that enables wasm modules and components to be run inside lightweight Virtual Machine backed Sandbox. It is built on top of Hyperlight.
"""
include = [
    "/src",
    "/scripts",
    "/examples",
    "benches",
    "/build.rs",
    "/vendor.tar", # Make sure vendor.tar is included!
]

[lib]
name = "hyperlight_wasm"
bench = false # see https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "helloworld"
path = "examples/helloworld/main.rs"
test = true

[[example]]
name = "hostfuncs"
path = "examples/hostfuncs/main.rs"
test = true

[[example]]
name = "rust_wasm_examples"
path = "examples/rust_wasm_examples/main.rs"
test = true

[[example]]
name = "metrics"
path = "examples/metrics/main.rs"
test = true

[dependencies]
hyperlight-host = { workspace = true }
libc = { version = "0.2.174" }
once_cell = "1.21.3"
tracing = "0.1.27"
log = "0.4.27"
cfg-if = { version = "1" }
metrics = "0.24.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_System_Threading"] }
page_size = "0.6.0"

[dev-dependencies]
hyperlight-component-macro = { version = "0.7.0", git = "https://github.com/hyperlight-dev/hyperlight", rev = "b61265e4aa9e2ecf8d648b994022caeea0205352" }
examples_common = { path = "../examples_common" }
criterion = { version = "0.6.0", features = ["html_reports"] }
crossbeam-queue = "0.3"
blake3 = "1.8"
toml = "0.9.2"
metrics-util = "0.20.0"
metrics-exporter-prometheus = "0.17"

[build-dependencies]
chrono = "0.4"
blake3 = "1.8"
built = { version = "0.8.0", features = ["chrono", "git2"] }
anyhow = { version = "1.0" }
goblin = "0.10.0"
tar = "0.4.44"

[features]
default = ["function_call_metrics", "kvm", "mshv2"]
function_call_metrics = ["hyperlight-host/function_call_metrics"]
seccomp = ["hyperlight-host/seccomp"]
print_debug = ["hyperlight-host/print_debug"]
crashdump = ["hyperlight-host/crashdump"]
kvm = ["hyperlight-host/kvm"]
mshv2 = ["hyperlight-host/mshv2"]
mshv3 = ["hyperlight-host/mshv3"]
gdb = ["hyperlight-host/gdb"]

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "benchmarks_components"
harness = false

