[package]
name = "hyperlight-wasm-aot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = """
Application to precompile WebAssembly binaries to for hyperlight-wasm.
"""

[dependencies]
wasmtime = { version = "34.0.2", default-features = false, features = ["cranelift", "runtime", "component-model" ] }
clap = "4.5"
cargo_metadata = "0.20"
cargo-util-schemas = "=0.2.0"
