[package]
name = "hyperlight-wasm-runtime"
version.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
edition = "2021"

[lib]
test = false
doctest = false
bench = false

[[bin]]
name = "hyperlight-wasm-runtime"
path = "src/main.rs"
test = false
doctest = false
bench = false

[target.'cfg(hyperlight)'.dependencies]
hyperlight-common = { workspace = true, default-features = false }
hyperlight-guest-bin = { workspace = true, features = [ "printf" ] }
hyperlight-guest.workspace = true
hyperlight-wasm-macro.workspace = true
wasmtime = { version = "36.0.6", default-features = false, features = [ "runtime", "custom-virtual-memory", "custom-native-signals", "component-model" ] }
spin = "0.10.0"
tracing = { version = "0.1.44", default-features = false, features = ["attributes", "log"] }

[build-dependencies]
cfg_aliases = "0.2.1"
cc = "1.2"
cfg-if = { version = "1" }
cargo_metadata = "0.23"
reqwest =  {version = "0.12", default-features = false, features = ["blocking","rustls-tls"] }

[features]
default = []
gdb = ["wasmtime/debug-builtins"]
pulley = ["wasmtime/pulley"]
trace_guest = ["hyperlight-common/trace_guest", "hyperlight-guest/trace_guest", "hyperlight-guest-bin/trace_guest"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(hyperlight)'] }

[patch.crates-io]
hyperlight-component-util = { path = "../hyperlight_component_util" }
