[package]
name = "wasm-runtime"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wasm_runtime"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
#hyperlight-common = { version = "0.6", default-features = false }
#hyperlight-guest-bin = { version = "0.6", features = [ "printf" ] }
#hyperlight-guest = { version = "0.6" }
hyperlight-common = { git = "https://github.com/hyperlight-dev/hyperlight.git", rev = "aeb1899eede9c4210df2691ffd3830913c5e404c", default-features = false }
hyperlight-guest-bin = { git = "https://github.com/hyperlight-dev/hyperlight.git", rev = "aeb1899eede9c4210df2691ffd3830913c5e404c", features = [ "printf" ] }
hyperlight-guest = { git = "https://github.com/hyperlight-dev/hyperlight.git", rev = "aeb1899eede9c4210df2691ffd3830913c5e404c" }
wasmtime = { version = "30.0.2", default-features = false, features = [ "runtime", "custom-virtual-memory", "custom-native-signals", "component-model" ] }
hyperlight-wasm-macro = { path = "../hyperlight_wasm_macro" }
spin = "0.9.8"

[build-dependencies]
cc = "1.2"
cfg-if = { version = "1" }
cargo_metadata = "0.19"
reqwest =  {version = "0.12", default-features = false, features = ["blocking","rustls-tls"] }
