[package]
name = "wasm-runtime"
version = "0.7.0"
edition = "2021"

[[bin]]
name = "wasm_runtime"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
hyperlight-common = { version = "0.7.0", git = "https://github.com/hyperlight-dev/hyperlight", rev = "ea6fa8f", default-features = false }
hyperlight-guest-bin = { version = "0.7.0", git = "https://github.com/hyperlight-dev/hyperlight", rev = "ea6fa8f", features = [ "printf" ] }
hyperlight-guest = { version = "0.7.0", git = "https://github.com/hyperlight-dev/hyperlight", rev = "ea6fa8f" }
wasmtime = { version = "34.0.2", default-features = false, features = [ "runtime", "custom-virtual-memory", "custom-native-signals", "component-model" ] }
hyperlight-wasm-macro = { path = "../hyperlight_wasm_macro" }
spin = "0.9.8"

[build-dependencies]
cc = "1.2"
cfg-if = { version = "1" }
cargo_metadata = "0.19"
reqwest =  {version = "0.12", default-features = false, features = ["blocking","rustls-tls"] }

[workspace] # indicate that this crate is not part of any workspace
